Rename \nb command in \gbtxt

--- a/lsdj-tutorial.tex
+++ b/lsdj-tutorial.tex
@@ -25,7 +25,7 @@
 \newcommand{\bUp}{\buttonStyle{up}}
 \newcommand{\bDown}{\buttonStyle{down}}
 
-\newcommand{\nb}[1]{\texttt{#1}\xspace}
+\newcommand{\gbtxt}[1]{\texttt{#1}\xspace}
 \newcommand{\lsdj}{\textit{LSDJ}\xspace}
 
 \DefineVerbatimEnvironment%
@@ -96,11 +96,11 @@ First we'll start with a simple bassline, then we'll create a bass instrument.
 
 \begin{enumerate}
 
-\item In Channel \nb{PU1}, highlight the first top left cell by using the control pad, then double tap \bA (this creates a new Chain).
+\item In Channel \gbtxt{PU1}, highlight the first top left cell by using the control pad, then double tap \bA (this creates a new Chain).
 
-\item You should now see chain \nb{01} in the cell you selected. Now you want to go to the chain screen (hold \bSelect + press \bRight)
+\item You should now see chain \gbtxt{01} in the cell you selected. Now you want to go to the chain screen (hold \bSelect + press \bRight)
 
-\item In the chain screen we want to create a phrase. Do this by double tapping \bA on the first cells at the top. For the sake of this tutorial I will assume you have created the phrase \nb{01}.
+\item In the chain screen we want to create a phrase. Do this by double tapping \bA on the first cells at the top. For the sake of this tutorial I will assume you have created the phrase \gbtxt{01}.
 
 \begin{figure}
 \begin{notes}
@@ -124,40 +124,40 @@ F.
 \caption{Initial bass line.}\label{bassline}
 \end{figure}
 
-\item Now we need to make the \textit{bassline}. Still in the chain screen, highlight phrase \nb{01} and hold \bSelect + press \bRight, this will take you to the phrase screen for phrase \nb{01}. Enter the notes as shown in Figure \ref{bassline}.
+\item Now we need to make the \textit{bassline}. Still in the chain screen, highlight phrase \gbtxt{01} and hold \bSelect + press \bRight, this will take you to the phrase screen for phrase \gbtxt{01}. Enter the notes as shown in Figure \ref{bassline}.
 
 
 \item If you press play (\bStart) you will hear the Game Boy burst into life. It's not much (and certainly not a bassline) but it's a start.
 
 \end{enumerate}
 
-Ok, we need to go back and create 3 more phrases in chain \nb{01} (if you think about it, most dance/pop music travels in the 4/4 timing. That's what we're aiming for here to get you familiar with the program) %TODO
+Ok, we need to go back and create 3 more phrases in chain \gbtxt{01} (if you think about it, most dance/pop music travels in the 4/4 timing. That's what we're aiming for here to get you familiar with the program) %TODO
 
 \begin{enumerate}[resume]
 
 
-\item To go back to the chain screen press and hold \bSelect and tap \bLeft. You should be back in chain \nb{01}, and phrase \nb{01} will be visible.
+\item To go back to the chain screen press and hold \bSelect and tap \bLeft. You should be back in chain \gbtxt{01}, and phrase \gbtxt{01} will be visible.
 
 \end{enumerate}
 
-Now, instead of having to create 3 new phrases and place the notes for each again, we're going to make it easier and faster for you. We're going to take our existing bassline section (phrase \nb{01}) and \textit{clone} it 3 times, so that we're able to edit each one without it affecting the other. 
+Now, instead of having to create 3 new phrases and place the notes for each again, we're going to make it easier and faster for you. We're going to take our existing bassline section (phrase \gbtxt{01}) and \textit{clone} it 3 times, so that we're able to edit each one without it affecting the other. 
 
 \begin{enumerate}[resume]
 
-\item In chain \nb{01}, place 3 more times the phrase \nb{01} below the one your already have there, for a total of 4.
+\item In chain \gbtxt{01}, place 3 more times the phrase \gbtxt{01} below the one your already have there, for a total of 4.
 
-\item To \textit{clone}, highlight the second phrase \nb{01}, hold \bSelect, then press \bB, then press \bA. The phrase number will change to one you've previously not used. Do this for the remaining two below.
+\item To \textit{clone}, highlight the second phrase \gbtxt{01}, hold \bSelect, then press \bB, then press \bA. The phrase number will change to one you've previously not used. Do this for the remaining two below.
 
 \end{enumerate}
 
-Now in chain \nb{01} you should see 4 different phrase numbers. If you look in the phrase screens for each you will see that they're exactly the same as each other. They all have the notes you placed inside for the first one. But because they now have different phrase numbers, you are able to edit each one independently of each other. Changing each phrase will not change another. This technique is the backbone of working quickly and efficiently with \lsdj, so it's handy to learn this straight away.
+Now in chain \gbtxt{01} you should see 4 different phrase numbers. If you look in the phrase screens for each you will see that they're exactly the same as each other. They all have the notes you placed inside for the first one. But because they now have different phrase numbers, you are able to edit each one independently of each other. Changing each phrase will not change another. This technique is the backbone of working quickly and efficiently with \lsdj, so it's handy to learn this straight away.
 
 
 \begin{enumerate}[resume]
 
 \item 
 Ok the next step is to edit the notes in each new phrase to round off our bassline.
-The first one contains all \nb{C} notes. Make the second one contain \nb{E} notes, make the third contain \nb{A} notes and the fourth to contain \nb{B} notes. For the sake of this tutorial we'll keep it as simple as possible.
+The first one contains all \gbtxt{C} notes. Make the second one contain \gbtxt{E} notes, make the third contain \gbtxt{A} notes and the fourth to contain \gbtxt{B} notes. For the sake of this tutorial we'll keep it as simple as possible.
 
 \item Go back to the chain screen and press \bStart. You will see each of your phrases playing in progression, with a small black arrow pointing to which phrase is currently playing. This will loop until you press start again.
 
@@ -170,11 +170,11 @@ Ok so you can hear the bassline progressing, and at last you can hear something 
 
 \begin{enumerate}
 	
-\item Navigate to the phrase screen for your first phrase (should be phrase \nb{01}).
+\item Navigate to the phrase screen for your first phrase (should be phrase \gbtxt{01}).
 
-\item Next to each note you will see an instrument number (default is \nb{00}). Highlight this number (any will do) and select the instrument screen using the same method as you did with previous screens (hold \bSelect + \bRight).
+\item Next to each note you will see an instrument number (default is \gbtxt{00}). Highlight this number (any will do) and select the instrument screen using the same method as you did with previous screens (hold \bSelect + \bRight).
 
-\item In the instrument channel, the first thing you should do (to avoid later confusion) is name your instrument. You just highlight the name box and it'll bring up an alphabet for you to choose from. As we're creating a bassline here, let's call it \nb{BASS}.
+\item In the instrument channel, the first thing you should do (to avoid later confusion) is name your instrument. You just highlight the name box and it'll bring up an alphabet for you to choose from. As we're creating a bassline here, let's call it \gbtxt{BASS}.
 
 \item Press \bStart to hear your phrase in the background (or if you wish, hold \bSelect and press \bStart to hear your entire song in the background) while you're editing the sound of the instrument. This is handy as you can hear what you're changing in real-time.
 
@@ -184,7 +184,7 @@ Next we want to edit the \textit{envelope} field. If you have very basic or no u
 
 \begin{enumerate}[resume]
 
-\item By default the envelope is set to \nb{A9}. If you change the \nb{A} up to \nb{F} (hold \bSelect + \bUp) you will hear the instrument getting louder. If you change the \nb{9} down to \nb{1} (hold \bSelect + \bLeft) you will hear the instrument getting shorter. Playing about with these values you should try to make the instrument sound short and punchy. A good one to try is around \nb{D3}.
+\item By default the envelope is set to \gbtxt{A9}. If you change the \gbtxt{A} up to \gbtxt{F} (hold \bSelect + \bUp) you will hear the instrument getting louder. If you change the \gbtxt{9} down to \gbtxt{1} (hold \bSelect + \bLeft) you will hear the instrument getting shorter. Playing about with these values you should try to make the instrument sound short and punchy. A good one to try is around \gbtxt{D3}.
 
 \end{enumerate}
 
@@ -220,11 +220,11 @@ Now we will first create a simple melody, then we will customize it with some co
 
 \begin{enumerate}	
 
-\item In Channel \nb{PU2}, create a new chain by double tapping \bA.
+\item In Channel \gbtxt{PU2}, create a new chain by double tapping \bA.
 
 \item Navigate to the chain screen and create a new phrase.
 
-\item Inside this phrase enter a note then immediately create a new instrument for it. As the instrument you used before was \nb{00} (by default) and you don't want the lead melody instrument to sound like the bassline instrument---let's make this one instrument \nb{01}.
+\item Inside this phrase enter a note then immediately create a new instrument for it. As the instrument you used before was \gbtxt{00} (by default) and you don't want the lead melody instrument to sound like the bassline instrument---let's make this one instrument \gbtxt{01}.
 
 \begin{figure}
 \begin{notes}
@@ -248,9 +248,9 @@ F.
 \caption{Initial lead melody.}\label{melody}%TODO
 \end{figure}
 
-\item We still need to enter notes for the lead melody so let's do something simple, as shown in Figure \ref{melody}. Each of these notes should now have instrument \nb{01} in the column next to them.
+\item We still need to enter notes for the lead melody so let's do something simple, as shown in Figure \ref{melody}. Each of these notes should now have instrument \gbtxt{01} in the column next to them.
 
-\item Go inside the instrument screen for instrument \nb{01}, name it \nb{LEAD1} and edit the parameters like before until you hear something you like. I'll choose envelope \nb{C2} and wave duty cycle left (25\%), but it's up to you!
+\item Go inside the instrument screen for instrument \gbtxt{01}, name it \gbtxt{LEAD1} and edit the parameters like before until you hear something you like. I'll choose envelope \gbtxt{C2} and wave duty cycle left (25\%), but it's up to you!
 
 \end{enumerate}
 
@@ -262,17 +262,17 @@ After you've done this head back to the phrase screen for this melody. The next 
 
 \begin{enumerate}
 	
-\item Go to row \nb{0} and highlight the first command box (you're able to highlight two). Push \bA and it'll give you the command \nb{A} straight away. We don't want this one, so hold \bA and keep pushing right until you get to command \nb{C}. This is the chord command.
+\item Go to row \gbtxt{0} and highlight the first command box (you're able to highlight two). Push \bA and it'll give you the command \gbtxt{A} straight away. We don't want this one, so hold \bA and keep pushing right until you get to command \gbtxt{C}. This is the chord command.
 
-\item Now highlight the box to the right of it and push \bA, it will come up with \nb{00}. This is where you alter what each command does. \nb{00} won't do anything on this command, so let's try \nb{07} instead. Hit \bSelect + \bStart to hear the melody with this new command in place. You'll hear that the first note is now magically transformed into a chord! Try doing this to a couple more notes in your melody.
+\item Now highlight the box to the right of it and push \bA, it will come up with \gbtxt{00}. This is where you alter what each command does. \gbtxt{00} won't do anything on this command, so let's try \gbtxt{07} instead. Hit \bSelect + \bStart to hear the melody with this new command in place. You'll hear that the first note is now magically transformed into a chord! Try doing this to a couple more notes in your melody.
 
 \end{enumerate}
 
-The second command we're going to try is the \nb{O} command. This can cause the notes in your melody to be played through either the left or right speaker channel, which is called \textit{panning}. There are four states you can assign to the command: \nb{L} (left), \nb{R} (right), \nb{LR} (left \& right) or \nb{\_\_} (which essentially turns both channels off so you get no sound coming through on that command).
+The second command we're going to try is the \gbtxt{O} command. This can cause the notes in your melody to be played through either the left or right speaker channel, which is called \textit{panning}. There are four states you can assign to the command: \gbtxt{L} (left), \gbtxt{R} (right), \gbtxt{LR} (left \& right) or \gbtxt{\_\_} (which essentially turns both channels off so you get no sound coming through on that command).
 
 \begin{enumerate}[resume]
 	
-\item  On rows \nb{1}, \nb{5}, \nb{9} and \nb{D} in your phrase, assign the \nb{O} command to \nb{L}. On rows \nb{3}, \nb{7}, \nb{B} and \nb{F} in your phrase, assign the \nb{O} command to \nb{R}.
+\item  On rows \gbtxt{1}, \gbtxt{5}, \gbtxt{9} and \gbtxt{D} in your phrase, assign the \gbtxt{O} command to \gbtxt{L}. On rows \gbtxt{3}, \gbtxt{7}, \gbtxt{B} and \gbtxt{F} in your phrase, assign the \gbtxt{O} command to \gbtxt{R}.
 
 \item Play your melody and you will hear that after each note, the channel is panned to either left or right. In this example we have panned the melody in the spaces between the notes---I tend to find this gives a better stereo effect than placing the pan on the rows where each note is. Also this gives you room to place commands (the chord command we used for instance) on the rows with the notes themselves.
 
@@ -298,17 +298,17 @@ Right now you're probably screaming \textit{"But how!? I'm already using both of
 
 \begin{enumerate}
 
-\item  In your \nb{PU1} channel, your bassline notes in each of the 4 phrases are only assigned to rows \nb{2}, \nb{6}, \nb{A} and \nb{E}. What we're going to do is create a pulse channel instrument that sounds like a kick drum, and we're going to place it in rows \nb{0}, \nb{4}, \nb{8} and \nb{C}. Simply put it'll sound like this: Kick, Bass, Kick, Bass, Kick, Bass, Kick, Bass.
+\item  In your \gbtxt{PU1} channel, your bassline notes in each of the 4 phrases are only assigned to rows \gbtxt{2}, \gbtxt{6}, \gbtxt{A} and \gbtxt{E}. What we're going to do is create a pulse channel instrument that sounds like a kick drum, and we're going to place it in rows \gbtxt{0}, \gbtxt{4}, \gbtxt{8} and \gbtxt{C}. Simply put it'll sound like this: Kick, Bass, Kick, Bass, Kick, Bass, Kick, Bass.
 
-\item First, go inside the first phrase in your bassline chain. Create a new instrument and place it on rows \nb{0}, \nb{4}, \nb{8} and \nb{C}, making sure that the note you place is always \nb{C5}.
+\item First, go inside the first phrase in your bassline chain. Create a new instrument and place it on rows \gbtxt{0}, \gbtxt{4}, \gbtxt{8} and \gbtxt{C}, making sure that the note you place is always \gbtxt{C5}.
 
-\item Go inside that instrument, make sure it is a pulse instrument and name it \nb{KICK}. Set the envelope to \nb{F1}. Set the wave duty cycle to middle (50\%). Go to the bottom of the screen and set the Table to \nb{00} (just hold \bA and press \bRight).
+\item Go inside that instrument, make sure it is a pulse instrument and name it \gbtxt{KICK}. Set the envelope to \gbtxt{F1}. Set the wave duty cycle to middle (50\%). Go to the bottom of the screen and set the Table to \gbtxt{00} (just hold \bA and press \bRight).
 
 \item Now navigate to the Table screen as you do with other screens by holding \bSelect and pressing \bRight. As this is a simple tutorial I'm not going to go into any detail with regards to tables right now, but this technique should give you a tiny taster of what tables are able to do.
 
-\item In the table screen you'll see a lot of columns, we're going to go to the top far right cell and use the command column to choose command \nb{PF1}. This is the \textit{pitch} command and what we are doing is pitching the pulse instrument right down to give it a punchy, kick drum sound. If you press start to preview what you've done you'll hear the kick coming right before each of your bass notes.
+\item In the table screen you'll see a lot of columns, we're going to go to the top far right cell and use the command column to choose command \gbtxt{PF1}. This is the \textit{pitch} command and what we are doing is pitching the pulse instrument right down to give it a punchy, kick drum sound. If you press start to preview what you've done you'll hear the kick coming right before each of your bass notes.
 
-\item The kick sounds a little unruly at the moment, what we need to do is tame how long it plays for by using the \nb{K} command to \textit{kill} the trail the kick seems to be leaving. Right at the bottom of the command column place command \nb{K00}, you'll probably find it's best to put it at the second to last row on the column to avoid clicking. Press play again and you'll hear it's eradicated the noisy trail and you're left with a loud, punchy kick drum and bass combo!
+\item The kick sounds a little unruly at the moment, what we need to do is tame how long it plays for by using the \gbtxt{K} command to \textit{kill} the trail the kick seems to be leaving. Right at the bottom of the command column place command \gbtxt{K00}, you'll probably find it's best to put it at the second to last row on the column to avoid clicking. Press play again and you'll hear it's eradicated the noisy trail and you're left with a loud, punchy kick drum and bass combo!
 
 \item Ok so that's your kick drum sorted on that phrase. All you need to do is make sure the kicks are present on each phrase that you're using. Once you've done this head back to the song screen and press \bStart to hear the kick drum, bassline and lead melody all in action.
 
@@ -322,15 +322,15 @@ Please note that this isn't the definitive method of creating a kick drum using 
 \begin{enumerate}
 
 
-\item Create a new chain in the Noise channel (\nb{NOI}). If you've been following up to now it should be chain \nb{03}. If not don't worry. Just double tap \bA to create a virgin chain.
+\item Create a new chain in the Noise channel (\gbtxt{NOI}). If you've been following up to now it should be chain \gbtxt{03}. If not don't worry. Just double tap \bA to create a virgin chain.
 
-\item Go into your new chain and create a new phrase, go into this phrase and place notes (the default is fine, don't worry about that now) on rows \nb{4} and \nb{C}. This is going to be your \textit{snare} drum so make sure these notes are assigned to a new instrument number, then go into the instrument screen for it.
+\item Go into your new chain and create a new phrase, go into this phrase and place notes (the default is fine, don't worry about that now) on rows \gbtxt{4} and \gbtxt{C}. This is going to be your \textit{snare} drum so make sure these notes are assigned to a new instrument number, then go into the instrument screen for it.
 
 \item In the instrument screen, we need to make sure that we are using a Noise instrument, so make sure that is selected instead of Pulse, Wave or Kit.
 
-\item Once you've done this name the instrument \nb{SNARE}. Press play to hear what you're altering whilst you edit the envelope to around \nb{C3}, change the length to something that sounds snappy, and finally edit the sweep until the notes playing start to resemble a snare sound. \nb{EF} usually works fine so try that.
+\item Once you've done this name the instrument \gbtxt{SNARE}. Press play to hear what you're altering whilst you edit the envelope to around \gbtxt{C3}, change the length to something that sounds snappy, and finally edit the sweep until the notes playing start to resemble a snare sound. \gbtxt{EF} usually works fine so try that.
 
-\item Go back to your phrase screen, create a new instrument, add these notes before and after each of the snares and experiment inside the instrument screen remember to name this instrument \nb{HAT}, and then make these as long or short as you want. \nb{A1} or \nb{A2} is usually a good envelope setting, and to be honest you won't really need to alter the length or sweep parameters but again, it's up to you, experimentation is the key!
+\item Go back to your phrase screen, create a new instrument, add these notes before and after each of the snares and experiment inside the instrument screen remember to name this instrument \gbtxt{HAT}, and then make these as long or short as you want. \gbtxt{A1} or \gbtxt{A2} is usually a good envelope setting, and to be honest you won't really need to alter the length or sweep parameters but again, it's up to you, experimentation is the key!
 
 \item Try changing a few of the phrases in this chain and adding new percussion patterns. Once you've got it sounding how you want navigate back to the song screen and hit \bStart to hear your kick drum, bassline, lead melody, snare and hi-hat all working in perfect harmony.
 
