Clarify some text + add hint on how to delete elements (A+B)

--- a/lsdj-tutorial.tex
+++ b/lsdj-tutorial.tex
@@ -96,9 +96,11 @@ First we'll start with a simple bassline, then we'll create a bass instrument.
 
 \begin{enumerate}
 
-\item In Channel \gbtxt{PU1}, highlight the first top left cell by using the control pad, then double tap \bA (this creates a new Chain).
+\item In Channel \gbtxt{PU1}, highlight the first top left cell by using the control pad, then double tap \bA. This creates a new \textit{chain}. 
 
-\item You should now see chain \gbtxt{01} in the cell you selected. Now you want to go to the chain screen (hold \bSelect + press \bRight)
+\item You should now see chain \gbtxt{01} in the cell you selected. If you make any mistake an create a chain by mistake (for instance in a wrong location), select the chain and press \bA and \bB at the same time. This deletes the selected element. Note that this also works for deleting other kinds of elements that we will see later (phrases, notes, etc.).
+
+\item Now you want to go to the chain screen: hold \bSelect + press \bRight while selecting your chaine \gbtxt{01}.
 
 \item In the chain screen we want to create a phrase. Do this by double tapping \bA on the first cells at the top. For the sake of this tutorial I will assume you have created the phrase \gbtxt{01}.
 
