Remove reference to an external link that we do not have

--- a/lsdj-tutorial.tex
+++ b/lsdj-tutorial.tex
@@ -182,7 +182,7 @@ Ok so you can hear the bassline progressing, and at last you can hear something 
 
 \end{enumerate}
 
-Next we want to edit the \textit{envelope} field. If you have very basic or no understanding of this, it's where you can control the ADSR (attack, decay, sustain, release). There are countless explanations of this on the net, read this link to do your homework.
+Next we want to edit the \textit{envelope} field. If you have very basic or no understanding of this, it's where you can control the ADSR (attack, decay, sustain, release). There are countless explanations of this on the net.
 
 \begin{enumerate}[resume]
 
