Remove text about making the second command box content appear
This does not appear necessary with LSDJ 4.8.9.

--- a/lsdj-tutorial.tex
+++ b/lsdj-tutorial.tex
@@ -264,9 +264,9 @@ After you've done this head back to the phrase screen for this melody. The next 
 
 \begin{enumerate}
 	
-\item Go to row \gbtxt{0} and highlight the first command box (you're able to highlight two). Push \bA and it'll give you the command \gbtxt{A} straight away. We don't want this one, so hold \bA and keep pushing right until you get to command \gbtxt{C}. This is the chord command.
+\item Go to row \gbtxt{0} and highlight the first command box that contain \gbtxt{-} (do not select the second command box that contains \gbtxt{00}). Push \bA and it'll give you the command \gbtxt{A} straight away. We don't want this one, so hold \bA and keep pushing right until you get to command \gbtxt{C}. This is the \textit{chord} command.
 
-\item Now highlight the box to the right of it and push \bA, it will come up with \gbtxt{00}. This is where you alter what each command does. \gbtxt{00} won't do anything on this command, so let's try \gbtxt{07} instead. Hit \bSelect + \bStart to hear the melody with this new command in place. You'll hear that the first note is now magically transformed into a chord! Try doing this to a couple more notes in your melody.
+\item Now highlight the box to the right of it, which contains \gbtxt{00}. This is where you alter what each command does. \gbtxt{00} won't do anything on this command, so let's try \gbtxt{07} instead. Hit \bSelect + \bStart to hear the melody with this new command in place. You'll hear that the first note is now magically transformed into a chord! Try doing this to a couple more notes in your melody.
 
 \end{enumerate}
 
