Move some text our of enumeration, as it is only explanations

--- a/lsdj-tutorial.tex
+++ b/lsdj-tutorial.tex
@@ -298,9 +298,9 @@ The answer is to forget about the wave channel for sampled drums and create an a
 
 Right now you're probably screaming \textit{"But how!? I'm already using both of those channels for my bassline \& lead melody!"} or \textit{"How the hell do I create a drum from a pulse instrument?!"}. It's really easy.
 
-\begin{enumerate}
+In your \gbtxt{PU1} channel, your bassline notes in each of the 4 phrases are only assigned to rows \gbtxt{2}, \gbtxt{6}, \gbtxt{A} and \gbtxt{E}. What we're going to do is create a pulse channel instrument that sounds like a kick drum, and we're going to place it in rows \gbtxt{0}, \gbtxt{4}, \gbtxt{8} and \gbtxt{C}. Simply put it'll sound like this: Kick, Bass, Kick, Bass, Kick, Bass, Kick, Bass.
 
-\item  In your \gbtxt{PU1} channel, your bassline notes in each of the 4 phrases are only assigned to rows \gbtxt{2}, \gbtxt{6}, \gbtxt{A} and \gbtxt{E}. What we're going to do is create a pulse channel instrument that sounds like a kick drum, and we're going to place it in rows \gbtxt{0}, \gbtxt{4}, \gbtxt{8} and \gbtxt{C}. Simply put it'll sound like this: Kick, Bass, Kick, Bass, Kick, Bass, Kick, Bass.
+\begin{enumerate}
 
 \item First, go inside the first phrase in your bassline chain. Create a new instrument and place it on rows \gbtxt{0}, \gbtxt{4}, \gbtxt{8} and \gbtxt{C}, making sure that the note you place is always \gbtxt{C5}.
 
