Subsections snare + hat, changed date text, add items in changes

--- a/lsdj-tutorial.tex
+++ b/lsdj-tutorial.tex
@@ -37,7 +37,7 @@
 %opening
 \title{\lsdj Tutorial}
 \author{Sabrepulse}
-\date{Original text: 2009? \\ Formatted on: \today}
+\date{Original text: before 2009? \\ Edited text: \today}
 
 
 \begin{document}
@@ -310,7 +310,7 @@ In your \gbtxt{PU1} channel, your bassline notes in each of the 4 phrases are on
 
 \item In the table screen you'll see a lot of columns, we're going to go to the top far right cell and use the command column to choose command \gbtxt{PF1}. This is the \textit{pitch} command and what we are doing is pitching the pulse instrument right down to give it a punchy, kick drum sound. If you press start to preview what you've done you'll hear the kick coming right before each of your bass notes.
 
-\item The kick sounds a little unruly at the moment, what we need to do is tame how long it plays for by using the \gbtxt{K} command to \textit{kill} the trail the kick seems to be leaving. Right at the bottom of the command column place command \gbtxt{K00}, you'll probably find it's best to put it at the second to last row on the column to avoid clicking. Press play again and you'll hear it's eradicated the noisy trail and you're left with a loud, punchy kick drum and bass combo!
+\item The kick sounds a little unruly at the moment, what we need to do is tame how long it plays for by using the \gbtxt{K} command to \textit{kill} the trail the kick seems to be leaving. Right at the bottom of the command column place command \gbtxt{K00}, you'll probably find it's best to put it at the second to last row on the column to avoid clicking\footnote{\textit{Note of the editor}: with LSDJ 4.8.9, putting the kill on the last two rows does not seem to have much effect. Line \gbtxt{8} sounds like a good candidate.}. Press play again and you'll hear it's eradicated the noisy trail and you're left with a loud, punchy kick drum and bass combo!
 
 \item Ok so that's your kick drum sorted on that phrase. All you need to do is make sure the kicks are present on each phrase that you're using. Once you've done this head back to the song screen and press \bStart to hear the kick drum, bassline and lead melody all in action.
 
@@ -320,6 +320,8 @@ Please note that this isn't the definitive method of creating a kick drum using 
 
 
 \section{Percussion (Snare Drum + Hihats)}
+
+\subsection{Snare}
 
 \begin{enumerate}
 
@@ -331,6 +333,12 @@ Please note that this isn't the definitive method of creating a kick drum using 
 \item In the instrument screen, we need to make sure that we are using a Noise instrument, so make sure that is selected instead of Pulse, Wave or Kit.
 
 \item Once you've done this name the instrument \gbtxt{SNARE}. Press play to hear what you're altering whilst you edit the envelope to around \gbtxt{C3}, change the length to something that sounds snappy, and finally edit the sweep until the notes playing start to resemble a snare sound. \gbtxt{EF} usually works fine so try that.
+
+\end{enumerate}
+
+\subsection{Hat}
+
+\begin{enumerate}
 
 \item Go back to your phrase screen, create a new instrument, add these notes before and after each of the snares and experiment inside the instrument screen remember to name this instrument \gbtxt{HAT}, and then make these as long or short as you want. \gbtxt{A1} or \gbtxt{A2} is usually a good envelope setting, and to be honest you won't really need to alter the length or sweep parameters but again, it's up to you, experimentation is the key!
 
@@ -346,8 +354,11 @@ By now, you should have enough basic knowledge and understanding to create chain
 Source: \url{https://www.douban.com/group/topic/8715664/}
 
 \begin{itemize}
-	\item Added some section titles
-	\item Changed some stuff to match last \lsdj version (4.8.9)
+	\item Added some section and subsection titles.
+	\item Created figures.
+	\item Changed some text to match last \lsdj version (4.8.9).
+	\item Used formatting for inputs or for displayed game boy text.
+	\item Added some text to clarify some parts or give some hints.
 \end{itemize}
 
 
