Change margins + minor change footnote

--- a/lsdj-tutorial.tex
+++ b/lsdj-tutorial.tex
@@ -6,6 +6,8 @@
 \usepackage{fancyvrb}
 \usepackage{enumitem}
 
+\usepackage[scale=.7]{geometry}
+
 \newcommand{\buttonStyle}[1]{\textsf{#1}\xspace}
 \newcommand{\buttonSymbolStyle}[1]{$\bm{#1}$\xspace}
 \newcommand{\bA}{\buttonStyle{A}}
@@ -310,7 +312,7 @@ In your \gbtxt{PU1} channel, your bassline notes in each of the 4 phrases are on
 
 \item In the table screen you'll see a lot of columns, we're going to go to the top far right cell and use the command column to choose command \gbtxt{PF1}. This is the \textit{pitch} command and what we are doing is pitching the pulse instrument right down to give it a punchy, kick drum sound. If you press start to preview what you've done you'll hear the kick coming right before each of your bass notes.
 
-\item The kick sounds a little unruly at the moment, what we need to do is tame how long it plays for by using the \gbtxt{K} command to \textit{kill} the trail the kick seems to be leaving. Right at the bottom of the command column place command \gbtxt{K00}, you'll probably find it's best to put it at the second to last row on the column to avoid clicking\footnote{\textit{Note of the editor}: with LSDJ 4.8.9, putting the kill on the last two rows does not seem to have much effect. Line \gbtxt{8} sounds like a good candidate.}. Press play again and you'll hear it's eradicated the noisy trail and you're left with a loud, punchy kick drum and bass combo!
+\item The kick sounds a little unruly at the moment, what we need to do is tame how long it plays for by using the \gbtxt{K} command to \textit{kill} the trail the kick seems to be leaving. Right at the bottom of the command column place command \gbtxt{K00}, you'll probably find it's best to put it at the second to last row on the column to avoid clicking\footnote{\textit{Editor note}: with LSDJ 4.8.9, putting the kill on the last two rows does not seem to have much effect. Line \gbtxt{8} sounds like a good candidate.}. Press play again and you'll hear it's eradicated the noisy trail and you're left with a loud, punchy kick drum and bass combo!
 
 \item Ok so that's your kick drum sorted on that phrase. All you need to do is make sure the kicks are present on each phrase that you're using. Once you've done this head back to the song screen and press \bStart to hear the kick drum, bassline and lead melody all in action.
 
